--- a/style/main.css
+++ b/style/main.css
@@ -148,11 +148,15 @@ h5 {
 }
 .feature {
     margin: 20px 0px;
-    background-color: whitesmoke;
+    background-color: aliceblue;
+}
+.feature p {
+    color: rgb(14, 126, 231);
+    font-size: 13px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .feature h1 {
-    color: black;
-    font-size: 16px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+color: rgb(49, 105, 168);
+font-family: monospace;
+font-size: 16px;
 }
-
