--- a/style/main.css
+++ b/style/main.css
@@ -152,11 +152,28 @@ h5 {
 }
 .feature p {
     color: rgb(14, 126, 231);
-    font-size: 13px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 15px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .feature h1 {
 color: rgb(49, 105, 168);
 font-family: monospace;
-font-size: 16px;
+font-size: 18px;
+}
+.contact {
+    margin: 20px opx;
+    background-color: aliceblue;
+}
+.contact h2 {
+    font-family: fantasy;
+    font-size: 30px;
+    color: rgb(15, 60, 143);
+}
+.contact h3 {
+    font-family: monospace;
+    font-size: 18px;
+    color: lightskyblue;
+}
+.container h1 {
+background-color: aliceblue;
 }
